--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "render react in server",
   "main": "index.js",
   "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon ./build/server.dev.js --watch server --watch config",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "moyu",
@@ -13,10 +14,19 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
     "cross-env": "^5.0.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "source-map-support": "^0.4.15"
   },
   "dependencies": {
-    "express": "^4.15.3"
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "morgan": "^1.8.2"
   }
 }
