--- a/package.json
+++ b/package.json
@@ -14,19 +14,38 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.29.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "node-less": "^1.0.0",
     "nodemon": "^1.11.0",
-    "source-map-support": "^0.4.15"
+    "progress-bar-webpack-plugin": "^1.10.0",
+    "source-map-support": "^0.4.15",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.2"
   },
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "morgan": "^1.8.2"
+    "html-loader": "^0.4.5",
+    "morgan": "^1.8.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.1"
   }
 }
