--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "babel-register": "^6.24.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "css-modules-require-hook": "^4.0.6",
     "file-loader": "^0.11.2",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
-    "node-less": "^1.0.0",
     "nodemon": "^1.11.0",
+    "postcss-less": "^1.1.0",
     "progress-bar-webpack-plugin": "^1.10.0",
     "source-map-support": "^0.4.15",
     "style-loader": "^0.18.2",
@@ -42,7 +44,6 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "html-loader": "^0.4.5",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
