--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^2.29.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "module": "^1.2.5",
     "nodemon": "^1.11.0",
     "postcss-less": "^1.1.0",
     "progress-bar-webpack-plugin": "^1.10.0",
@@ -47,6 +48,6 @@
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.1.1"
+    "react-router": "^3.0.5"
   }
 }
