--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "asset-require-hook": "^1.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -35,6 +36,10 @@
     "nodemon": "^1.11.0",
     "postcss-less": "^1.1.0",
     "progress-bar-webpack-plugin": "^1.10.0",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-thunk": "^2.2.0",
     "source-map-support": "^0.4.15",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
@@ -45,9 +50,12 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^3.0.5"
+    "react-redux": "^5.0.5",
+    "react-router": "^3.0.5",
+    "redux": "^3.7.2"
   }
 }
