--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "render react in server",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon ./build/server.dev.js --watch server --watch config",
+    "dev": "cross-env NODE_ENV=development nodemon ./server/server.dev.js --watch server --watch config",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --config ./config/webpack.prod.config.js --progress",
+    "clean": "rimraf ./dist/*",
+    "start": "node ./dist/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "moyu",
@@ -15,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "asset-require-hook": "^1.1.0",
+    "autoprefixer-loader": "^3.2.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -27,7 +31,9 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "css-modules-require-hook": "^4.0.6",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.11.2",
+    "helmet": "^3.6.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
     "less": "^2.7.2",
@@ -35,11 +41,13 @@
     "module": "^1.2.5",
     "nodemon": "^1.11.0",
     "postcss-less": "^1.1.0",
+    "postcss-loader": "^2.0.6",
     "progress-bar-webpack-plugin": "^1.10.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.1",
     "source-map-support": "^0.4.15",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
